# tmux-wezterm-shim

./: .gitignore  BUILD_REPORT.md  Cargo.toml  README.md  VERIFY_REPORT.md  VERIFY_REPORT_FINAL.md
.cargo/: config.toml
docs/: ACTIVATION.md  INTEGRATION_TESTING.md
scripts/: install.ps1  launch-team.ps1  uninstall.ps1
src/: main.rs
