[package]
name = "tmux"
version = "0.1.0"
edition = "2021"
description = "WezTerm shim that translates tmux subcommands for Claude Code agent-teams on Windows"

[[bin]]
name = "tmux"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fs2 = "0.4"

[profile.release]
opt-level = 3
strip = true
